# titan

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE-MIT  README.md  build.rs
.github/: pull_request_template.md
.github/workflows/: ci.yml
crates/titan_cli/: Cargo.toml
crates/titan_cli/src/: main.rs
crates/titan_cli/tests/: render.rs  run.rs  scene.rs  version.rs
crates/titan_cli/tests/fixtures/: moving_entity.tsf
crates/titan_core/: Cargo.toml
crates/titan_core/src/: lib.rs
crates/titan_core/tests/: determinism.rs
crates/titan_math/: Cargo.toml
crates/titan_math/src/: lib.rs
crates/titan_render/: Cargo.toml
crates/titan_render/src/: geometry.rs  gpu.rs  lib.rs
crates/titan_render/tests/: red_cube.rs
crates/titan_render/tests/fixtures/: red_cube.golden.json  red_cube.tsf
crates/titan_scene/: Cargo.toml
crates/titan_scene/src/: lib.rs  load.rs  registry.rs
crates/titan_scene/src/tsf/: format.rs  mod.rs  parse.rs  path.rs  validate.rs
crates/titan_scene/tests/: tsf.rs
crates/titan_scene/tests/fixtures/: moving_entity.tsf
docs/: DESIGN.md  ROADMAP.md
docs/design/: 0001-titan-scene-format.md  0002-ecs-core.md  0003-headless-rendering.md  README.md  TEMPLATE.md
examples/: hello.rs
src/: lib.rs
src/alloc/: mod.rs
src/collections/: mod.rs
src/platform/: linux.rs  macos.rs  mod.rs
