[package]
name = "titan_cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "titan"
path = "src/main.rs"

[dependencies]
clap.workspace = true
png.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile = "3.23.0"
titan_core.workspace = true
titan_render.workspace = true
titan_scene.workspace = true

[dev-dependencies]
assert_cmd = "2.1.1"
predicates = "3.1.3"
