[package]
name = "titan_render"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
pollster.workspace = true
serde.workspace = true
titan_core.workspace = true
titan_math.workspace = true
titan_scene.workspace = true
wgpu.workspace = true

[dev-dependencies]
titan_scene.workspace = true

[lib]
path = "src/lib.rs"
